--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 torch>=2.4.0
 torchvision>=0.19.0
+torchaudio
 opencv-python>=4.9.0.80
 diffusers>=0.31.0
 transformers>=4.49.0
@@ -14,3 +15,28 @@ imageio-ffmpeg
 flash_attn
 gradio>=5.0.0
 numpy>=1.23.5,<2
+fastapi
+uvicorn
+pydantic
+huggingface_hub
+pillow
+ninja
+pyyaml
+einops
+torchreid
+packaging
+scipy
+opencv-python-headless
+gdown
+tensorboard
+tensorboardX
+protobuf
+cython
+xformers
+triton
+deepspeed
+nvidia-pyindex
+nvidia-tensorrt
+bitsandbytes
+py3nvml
+fastertransformer
