--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-torch>=2.4.0
-torchvision>=0.19.0
-torchaudio
+torch==2.3.0
+torchvision==0.20.0
+torchaudio==0.10.0
 opencv-python>=4.9.0.80
 diffusers>=0.31.0
 transformers>=4.49.0
@@ -40,3 +40,4 @@ nvidia-tensorrt
 bitsandbytes
 py3nvml
 fastertransformer
+typer<0.10.0,>=0.3.0  # Adjusted to avoid conflict with spacy and weasel
