--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-torch==2.3.0
-torchvision==0.20.0
-torchaudio==0.10.0
+torch>=2.4.0
+torchvision>=0.19.0
 opencv-python>=4.9.0.80
 diffusers>=0.31.0
 transformers>=4.49.0
@@ -12,33 +11,6 @@ easydict
 ftfy
 dashscope
 imageio-ffmpeg
-flash_attn==2.3.0  # Pin to a specific version
+flash_attn
 gradio>=5.0.0
 numpy>=1.23.5,<2
-fastapi
-uvicorn
-pydantic
-huggingface_hub
-pillow
-ninja
-pyyaml
-einops
-torchreid
-packaging
-scipy
-opencv-python-headless
-gdown
-tensorboard
-tensorboardX
-protobuf
-cython
-xformers
-triton
-deepspeed
-nvidia-pyindex
-nvidia-tensorrt
-bitsandbytes
-py3nvml
-fastertransformer
-typer<0.10.0,>=0.3.0  # Adjusted to avoid conflict with spacy and weasel
-optree>=0.13.0
