--- a/Dockerfile_test
+++ b/Dockerfile_test
@@ -24,8 +24,8 @@ RUN pip install --upgrade pip setuptools wheel packaging
 # Copy Requirements Files
 COPY requirements.txt /app/requirements.txt
 
-# Install Python Dependencies (Using Cached Layers)
-RUN pip install --no-cache-dir -r /app/requirements.txt
+# # Install Python Dependencies (Using Cached Layers)
+# RUN pip install --no-cache-dir -r /app/requirements.txt
 
 # Pre-download WAN 2.1 Model
 RUN huggingface-cli download Wan-AI/Wan2.1-T2V-14B --local-dir ${MODEL_DIR} --revision main
@@ -38,4 +38,5 @@ COPY . /app
 EXPOSE 8000
 
 # Run Application
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "2"]
+# uvicork app:app --host 0.0.0.0 --port 8000 --workers 2
+# CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "2"]
