Trying adding dependencies: transformer-engine 1.7.0+4e7caa1 requires flash-attn!=2.0.9,!=2.1.0,<=2.5.8,>=2.0.6, but you have flash-attn 2.7.4.post1 which is incompatible.

--- a/requirements.txt
+++ b/requirements.txt
@@ -24,5 +24,7 @@ pydantic>=2.9.2   # Required for validation
 ## Optional dependencies (commented out if not explicitly used in app.py)
 # fastertransformer        # NVIDIA’s Transformer optimization lib (not used in app.py)
 # nvidia-pyindex           # Required for NVIDIA package indexing
-
 # FlashAttention must be installed separately due to CUDA compatibility issues
+
+## Dependencies
+transformer-engine>=2.1.0
