--- a/Dockerfile_test
+++ b/Dockerfile_test
@@ -1,5 +1,5 @@
-# ✅ Best NVIDIA image for PyTorch 2.4 + CUDA 12.3 (Matches FlashAttention)
-FROM nvcr.io/nvidia/pytorch:24.01-py3
+# ✅ Best NVIDIA image for PyTorch 2.4 + CUDA 12.3
+FROM nvcr.io/nvidia/pytorch:24.06-py3
 
 # Set Environment Variables for Performance Optimization
 ENV DEBIAN_FRONTEND=noninteractive
@@ -17,21 +17,41 @@ ENV CUDA_HOME=/usr/local/cuda-12.3
 ENV PATH="${CUDA_HOME}/bin:${PATH}"
 ENV LD_LIBRARY_PATH="${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}"
 
-# Install System Dependencies (CUDA + Build Tools)
+# Install System Dependencies (CUDA + Build Tools + Python 3.10)
 RUN apt-get update && apt-get install -y \
-  python3-pip git wget curl ffmpeg libgl1-mesa-glx \
+  python3.10 python3.10-venv python3.10-dev python3-pip \
+  git wget curl ffmpeg libgl1-mesa-glx \
   ninja-build build-essential cmake \
   && rm -rf /var/lib/apt/lists/*
+
+# Set Python 3.10 as Default
+RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 1 && \
+  update-alternatives --config python3
+
+# Verify Python version
+RUN python3 --version
 
 # Upgrade pip and install core dependencies
 RUN pip install --upgrade pip setuptools wheel packaging
 
+# Debug CUDA version inside the container
+RUN echo "🔍 Checking CUDA version inside container..." && \
+  nvcc --version && \
+  python -c "import torch; print('Torch CUDA Version:', torch.version.cuda)"
+
 # Copy Requirements Files
 COPY requirements.txt /app/requirements.txt
+
+# ✅ Install the correct FlashAttention wheel (CUDA 12.3, PyTorch 2.4)
+RUN git clone https://github.com/princeton-vl/RAFT.git
+
 
 # Set Working Directory & Copy Application Files
 WORKDIR /app
 COPY . /app
 
-# Start Bash for manual testing
+# Expose API Port
+EXPOSE 8000
+
+# Run Application
 CMD ["/bin/bash"]
