--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,5 @@ pydantic>=2.9.2   # Required for validation
 
 ## Dependencies
 transformer-engine>=2.1.0
+uvicorn>=0.34.0  # ASGI server for FastAPI
+h11>=0.14.0  # HTTP/1.1 support (required by uvicorn)
