Testing with distributed load!

--- a/.github/workflows/azure-acr-build.yml
+++ b/.github/workflows/azure-acr-build.yml
@@ -41,7 +41,6 @@ jobs:
         if: ${{ steps.check_image.outputs.exists }} == 'false'
         run: |
           VERSION=$(cat VERSION)
-          docker build -t ttv/wan21/wan2.1:$VERSION -f Dockerfile .
-          az acr login --name tngodemo1cr
-          docker tag ttv/wan21/wan2.1:$VERSION tngodemo1cr.azurecr.io/ttv/wan21/wan2.1:$VERSION
-          docker push tngodemo1cr.azurecr.io/ttv/wan21/wan2.1:$VERSION
+          az acr build --registry tngodemo1cr \
+            --image ttv/wan21/wan2.1:$VERSION \
+            --file Dockerfile .
